# ex-machina-wall

./: .gitignore  platformio.ini
arduino/src/: led_driver.cpp  led_driver.h  main.cpp  receiver.cpp  receiver.h
cloud_flare_worker/: package-lock.json  package.json  wrangler.toml
cloud_flare_worker/src/: index.js
otherstuff/: main copy.cpp  receiver.cpp
raspberry-pi-controller/: README.md  poetry.toml  pyproject.toml
raspberry-pi-controller/raspberry_pi_controller/: audio_listener.py  constants.py  frame.py  led_panel.py  main.py  ntfy_listener.py  ntfy_logger.py  transmitter.py  websocket_transmitter.py
raspberry-pi-controller/raspberry_pi_controller/audio_reactor/: stream_analyzer.py  stream_reader_pyaudio.py  stream_reader_sounddevice.py  visualizer.py
raspberry-pi-controller/raspberry_pi_controller/effects/: __init__.py  abstract_effect.py  audio_effect.py  audio_effect_2.py  image_effect.py  two_color_random_effect.py
raspberry-pi-controller/raspberry_pi_controller/image_handling/: favorite_images.py  image_handler.py
rpi-development/Halloween/: appendage.py  color_profiles.py  led_strip.py
rpi-development/HomeKit/: accessory.state
rpi-development/Wireless/: main.py
rpi-development/rpi_audio_reactor/: transmitter.py
src/: led_driver.cpp  led_driver.h  main.cpp
wall-emulator/: pyproject.toml  testing_gif.py
wall-emulator/wall_emulator/: bezier.py  emulator.py  global_game_variable.py  main.py  panel.py  slider.py  utils.py
website-front-end/: README.md  package-lock.json  package.json  tailwind.config.js
website-front-end/src/: App.css  (+7 more)
(+13 files in other folders)
